--- a/apps/block_scout_web/assets/css/theme/_base_variables.scss
+++ b/apps/block_scout_web/assets/css/theme/_base_variables.scss
@@ -48,7 +48,7 @@ $orange: #ef9a60 !default;
 $yellow: #ffc107 !default;
 $green: #20b760 !default;
 $teal: #009097 !default;
-$cyan: #90e1d8 !default;
+$cyan: #53a551 !default;
 $dark-purple: #923dc3;
 
 $colors: () !default;
