--- a/apps/block_scout_web/assets/css/_mixins.scss
+++ b/apps/block_scout_web/assets/css/_mixins.scss
@@ -29,20 +29,9 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding-left: calc(1rem + 4px);
+    padding-left: 1rem;
     padding-right: 1rem;
     position: relative;
-
-    &::before {
-      background-color: $border-color;
-      border-radius: 2px;
-      content: "";
-      height: 100%;
-      left: 0;
-      position: absolute;
-      top: 0;
-      width: 4px;
-    }
   }
 
   &-label {
