--- a/apps/block_scout_web/assets/css/components/_footer.scss
+++ b/apps/block_scout_web/assets/css/components/_footer.scss
@@ -1,6 +1,5 @@
-$footer-background-color: $secondary !default;
-$footer-title-color: #fff !default;
-$footer-text-color: rgba(#fff, 0.7) !default;
+$footer-title-color: #202020 !default;
+$footer-text-color: #8C91A3 !default;
 $footer-link-color: $footer-text-color !default;
 $footer-item-disc-color: $primary !default;
 $footer-social-icon-color: $footer-text-color !default;
@@ -10,10 +9,9 @@ $footer-logo-width: auto !default;
 .footer {
   background: $footer-background-color;
   color: $footer-text-color;
-  font-size: 12px;
-  line-height: 1.67;
-  margin: 0;
-  padding: 40px 0;
+  font-size: 14px;
+  line-height: 20px;
+  padding: 40px;
   position: relative;
 
   @media (max-width: $breakpoint-md) {
@@ -75,7 +73,7 @@ $footer-logo-width: auto !default;
 
   h3 {
     color: $footer-title-color;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 300;
     line-height: 1.4;
     margin: 0 0 15px;
