--- a/apps/block_scout_web/assets/css/components/_navbar.scss
+++ b/apps/block_scout_web/assets/css/components/_navbar.scss
@@ -23,7 +23,8 @@ $navbar-logo-width: 100% !default;
   }
 
   .navbar-nav {
-    
+    display: block;
+
     .nav-link {
       outline: none;
       align-items: center;
@@ -101,112 +102,6 @@ $navbar-logo-width: 100% !default;
       background-image: url($header-toggler-icon);
     }
   }
-  .search-form {
-    display: flex;
-
-    @include media-breakpoint-up(xl) {
-      height: 57px;
-      margin-bottom: -8px;
-      margin-top: -8px;
-    }
-  }
-
-  .form-inline {
-    height: 100%;
-  }
-
-  .input-group {
-    height: 100%;
-    position: relative;
-  }
-
-  .form-control {
-    background: $header-textfield-background-color;
-    border-color: $header-textfield-background-color;
-    color: $header-textfield-text-color;
-    font-size: 14px;
-    height: 100%;
-    padding-left: 38px;
-    padding-right: 8px;
-    position: relative;
-    width: 100%;
-    z-index: 1;
-
-    &[placeholder]{
-      text-overflow: ellipsis !important;
-    }
-    &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-        text-overflow: ellipsis  !important;
-    }
-    &::-moz-placeholder { /* Firefox 19+ */
-        text-overflow: ellipsis  !important;
-    }
-    &:-ms-input-placeholder { /* IE 10+ */
-        text-overflow: ellipsis  !important;
-    }
-    &:-moz-placeholder { /* Firefox 18- */
-        text-overflow: ellipsis  !important;
-    }
-
-    &:focus {
-      box-shadow: none;
-    }
-
-    @include media-breakpoint-up(xl) {
-      width: 290px;
-    }
-    @media (min-width: 1366px) {
-      width: 380px;
-    }
-    @media (min-width: 1540px) {
-      width: 550px;
-    }
-  }
-  .input-group-append {
-    height: 38px;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 38px;
-    z-index: 5;
-
-    &.left {
-      left: 0px;
-    }
-
-    &.right {
-      right: 8px;
-      width: 25px;
-      height: 25px;
-    }
-
-    &.desktop-only {
-      @include media-breakpoint-down(md) {
-        display: none;
-      }
-    }
-
-    * {
-      fill: $header-textfield-magnifier-color;
-    }
-  }
-  .input-group-text {
-    align-items: center;
-    background: none;
-    border-color: transparent;
-    display: flex;
-    height: 100%;
-    justify-content: center;
-    padding: 0;
-    width: 100%;
-
-    &.border {
-      border-color: $secondary !important;
-      border-radius: 5px;
-      color: $secondary;
-      background-color: $header-textfield-background-color;
-    }
-  }
 }
 
 .navbar-collapse.collapsing,
@@ -237,7 +132,7 @@ $navbar-logo-width: 100% !default;
   flex-shrink: 1;
   display: inline-flex;
   .navbar-logo {
-    max-width: 100%;
+    width: 128px;
   }
 }
 
