--- a/apps/block_scout_web/assets/css/components/_stakes_table.scss
+++ b/apps/block_scout_web/assets/css/components/_stakes_table.scss
@@ -11,6 +11,7 @@ $stakes-link-color: $primary !default;
 .addresses-table-container {
   margin-left: -30px;
   margin-right: -30px;
+  color: #474747;
   .stakes-table-container {
     table {
       width: 100%;
@@ -23,7 +24,7 @@ $stakes-link-color: $primary !default;
     }
   }
   .color-lighten {
-    color: #828ba0;
+    color: #C4C5C8;
   }
 }
 
@@ -105,8 +106,8 @@ $stakes-link-color: $primary !default;
 }
 
 .stakes-table-th {
-  background-color: $stakes-table-th-background;
-  color: #a3a9b5;
+  background-color: #F1F1F1;
+  color: #8E8E8E;
   font-size: 14px;
   font-weight: bold;
   line-height: 1.2;
@@ -138,10 +139,10 @@ $stakes-link-color: $primary !default;
 }
 
 .stakes-td {
-  border-bottom: 1px solid #f5f6fa;
+  border-bottom: 1px solid #E4E4E4;
   font-size: 14px;
   font-weight: normal;
-  height: 60px;
+  height: 50px;
   line-height: 1.5;
   padding-right: $stakes-table-cell-separation;
   text-align: left;
@@ -161,6 +162,10 @@ $stakes-link-color: $primary !default;
     display: block;
     float: left;
     padding-right: 30px;
+  }
+
+  a {
+    color: #573BFF;
   }
 }
 
