--- a/apps/block_scout_web/assets/css/_layout.scss
+++ b/apps/block_scout_web/assets/css/_layout.scss
@@ -2,21 +2,28 @@
 
 .layout-container {
   display: flex;
-  min-height: 100vh;
+  height: 100vh;
+  background-color: #F7F8FA;
 
   .leftbox {
     width: 265px;
+    height: 100%;
     background-color: #fff;
     margin-right: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
 
   main {
     flex-grow: 1;
-    background-color: #F7F8FA;
+    height: 100%;
+    overflow-y: auto;
   }
 
   .search-form {
-    margin-bottom: 10px;
+    margin-bottom: 15px;
+    padding: 10px;
     background-color: #fff;
   }
 }
