--- a/apps/block_scout_web/assets/css/components/_fontawesome_icon.scss
+++ b/apps/block_scout_web/assets/css/components/_fontawesome_icon.scss
@@ -1,5 +1,5 @@
 .fontawesome-icon {
-    background-color: $footer-text-color;
+    background-color: #3E4055;
   
     &.github {
       -webkit-mask: url(../static/images/icons/fontawesome/github.svg) no-repeat center;
