--- a/apps/block_scout_web/assets/css/components/_navbar.scss
+++ b/apps/block_scout_web/assets/css/components/_navbar.scss
@@ -17,6 +17,9 @@ $navbar-logo-width: 100% !default;
   background-color: $header-background-color;
   position: relative;
   z-index: 100;
+  width: 265px;
+  box-shadow: none;
+  padding: 30px;
 
   .nav-item {
     font-size: 14px;
@@ -33,43 +36,6 @@ $navbar-logo-width: 100% !default;
       font-size: 14px;
       position: relative;
       transition: $transition-cont;
-
-      &:before {
-        background-color: $header-icon-border-color-hover;
-        border-radius: 0 0 4px 4px;
-        content: "";
-        display: block;
-        height: 0.25rem;
-        left: 50%;
-        opacity: 0;
-        position: absolute;
-        top: -10px;
-        transform: translateX(-50%);
-        transition: $transition-cont;
-        width: calc(
-          100% - #{$header-link-horizontal-padding} - #{$header-link-horizontal-padding}
-        );
-      }
-
-      &.active,
-      &:hover {
-        @include media-breakpoint-up(lg) {
-          &:before {
-            opacity: 1;
-          }
-        }
-      }
-
-      &.active,
-      &:hover,
-      &.active-icon {
-        color: $header-links-color-active;
-        .nav-link-icon {
-          path {
-            fill: $header-icon-color-hover;
-          }
-        }
-      }
 
       .nav-link-icon {
         align-items: center;
@@ -102,6 +68,10 @@ $navbar-logo-width: 100% !default;
       background-image: url($header-toggler-icon);
     }
   }
+}
+
+.navbar-container {
+  width: 100%;
 }
 
 .navbar-collapse.collapsing,
