--- a/apps/block_scout_web/assets/css/components/_dashboard-banner.scss
+++ b/apps/block_scout_web/assets/css/components/_dashboard-banner.scss
@@ -20,7 +20,7 @@ $dashboard-banner-chart-axis-font-color: $dashboard-stats-item-value-color !defa
 $dashboard-banner-chart-axis-font-color-alt: #333;
 
 .dashboard-banner-container {
-  margin-bottom: 3rem;
+  margin-bottom: 15px;
   overflow: hidden;
   padding: 0;
   position: relative;
