--- a/apps/block_scout_web/assets/css/components/_modal_status.scss
+++ b/apps/block_scout_web/assets/css/components/_modal_status.scss
@@ -88,8 +88,8 @@ $modal-status-graph-question: #329ae9 !default;
   .btn-line {
     flex-grow: 1;
     margin-right: 20px;
-    border-color: $primary;
-    color: $primary;
+    border-color: #562CFF;
+    color: #562CFF;
 
     &:hover {
       background-color: $primary;
