--- a/apps/block_scout_web/lib/block_scout_web/templates/chain/_block.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/chain/_block.html.eex
@@ -1,4 +1,4 @@
-<div class="col-lg-3 fade-up-blocks-chain" data-selector="chain-block" data-block-number="<%= @block.number %>">
+<div class="fade-up-blocks-chain" data-selector="chain-block" data-block-number="<%= @block.number %>">
   <div class="tile tile-type-block n-p d-flex flex-column">
     <%= link(
           @block,
