--- a/apps/block_scout_web/lib/block_scout_web/templates/chain/show.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/chain/show.html.eex
@@ -150,18 +150,18 @@
     </div>
   </div>
 </div>
-<section class="container">
+<section class="container" style="display: flex;background: #F7F8FA;">
   <div class="card card-chain-blocks js-ad-dependant-mb-3">
     <div class="card-body">
       <%= link(gettext("View All Blocks"), to: blocks_path(BlockScoutWeb.Endpoint, :index), class: "btn-line float-right") %>
       <h2 class="card-title"><%= gettext "Blocks" %></h2>
-      <div class="row" data-selector="chain-block-list" data-url="<%= chain_blocks_path(@conn, :chain_blocks) %>">
+      <div class="" data-selector="chain-block-list" data-url="<%= chain_blocks_path(@conn, :chain_blocks) %>">
         <button data-selector="error-message" class="alert alert-danger col-12 text-left" style="display: none;">
           <span class="alert-link">
             <%= gettext "Something went wrong, click to reload." %>
           </span>
         </button>
-        <div hidden data-selector="loading-message" class="col-lg-3" >
+        <div hidden data-selector="loading-message" class="" >
          <div data-selector="chain-block">
            <div class="tile tile-type-block n-p d-flex flex-column">
              <a class="tile-title"><span class="tile-loader tile-label-loader"></span> </a>
@@ -172,7 +172,7 @@
            </div>
          </div>
         </div>
-        <div hidden data-selector="loading-message" class="col-lg-3" >
+        <div hidden data-selector="loading-message" class="" >
          <div data-selector="chain-block">
            <div class="tile tile-type-block n-p d-flex flex-column">
              <a class="tile-title"><span class="tile-loader tile-label-loader"></span> </a> 
@@ -183,7 +183,7 @@
            </div>
          </div>
         </div>
-        <div hidden data-selector="loading-message" class="col-lg-3" >
+        <div hidden data-selector="loading-message" class="" >
          <div data-selector="chain-block">
            <div class="tile tile-type-block n-p d-flex flex-column">
              <a class="tile-title"><span class="tile-loader tile-label-loader"></span> </a> 
@@ -194,7 +194,7 @@
            </div>
          </div>
         </div>
-        <div hidden data-selector="loading-message" class="col-lg-3" >
+        <div hidden data-selector="loading-message" class="" >
          <div data-selector="chain-block">
            <div class="tile tile-type-block n-p d-flex flex-column">
              <a class="tile-title"><span class="tile-loader tile-label-loader"></span> </a>
