--- a/apps/block_scout_web/assets/css/_layout.scss
+++ b/apps/block_scout_web/assets/css/_layout.scss
@@ -8,6 +8,7 @@
   .leftbox {
     width: 265px;
     height: 100%;
+    overflow-y: auto;
     background-color: #fff;
     margin-right: 10px;
     display: flex;
@@ -19,6 +20,7 @@
     flex-grow: 1;
     height: 100%;
     overflow-y: auto;
+    padding-bottom: 20px;
   }
 
   .search-form {
