--- a/apps/block_scout_web/assets/css/components/_btn_line.scss
+++ b/apps/block_scout_web/assets/css/components/_btn_line.scss
@@ -3,6 +3,9 @@ $btn-line-color: $secondary !default;
 
 .btn-line {
   @include btn-line($btn-line-bg, $btn-line-color);
+  color: #562CFF !important;
+  border-color: #562CFF !important;
+  height: auto !important;
 }
 
 .btn-line-inversed {
