--- a/apps/block_scout_web/assets/css/components/_form.scss
+++ b/apps/block_scout_web/assets/css/components/_form.scss
@@ -115,6 +115,8 @@ $form-control-border-color-active: $primary !default;
 
 .tokens-list-search-input-outer-container {
   display: flex;
+  align-items: center;
+  margin-bottom: 10px;
   @include media-breakpoint-down(md) {
     display: block;
   }
