--- a/apps/block_scout_web/assets/css/main-page.scss
+++ b/apps/block_scout_web/assets/css/main-page.scss
@@ -14,7 +14,7 @@
 
 @import "theme/variables";
 
-@import "~bootstrap/scss/root";
+//@import "~bootstrap/scss/root";
 @import "~bootstrap/scss/reboot";
 @import "~bootstrap/scss/grid";
 @import "~bootstrap/scss/buttons";
