--- a/apps/block_scout_web/assets/css/components/_stakes_table.scss
+++ b/apps/block_scout_web/assets/css/components/_stakes_table.scss
@@ -9,14 +9,19 @@ $stakes-link-color: $primary !default;
 }
 
 .addresses-table-container {
-  margin-left: -30px;
-  margin-right: -30px;
   color: #474747;
   .stakes-table-container {
     table {
       width: 100%;
       th:first-child {
         padding-left: 25px;
+	border-top-left-radius: 8px;
+        border-bottom-left-radius: 8px;
+      }
+      th:last-child {
+	padding-right: 25px;
+        border-top-right-radius: 8px;
+        border-bottom-right-radius: 8px;
       }
       td:first-child {
         padding-left: 25px;
@@ -110,19 +115,13 @@ $stakes-link-color: $primary !default;
   color: #8E8E8E;
   font-size: 14px;
   font-weight: bold;
-  line-height: 1.2;
-  text-align: left;
-
-  &:first-child {
-    min-width: 15px;
-  }
 }
 
 .stakes-table-th-content {
   align-items: center;
   display: flex;
   justify-content: flex-start;
-  padding: 21px $stakes-table-cell-separation 21px 0;
+  padding: 15px 0;
   position: relative;
   z-index: 0;
 
@@ -167,6 +166,14 @@ $stakes-link-color: $primary !default;
   a {
     color: #573BFF;
   }
+
+  span[data-test="address_balance"] {
+    font-weight: bold;
+  }
+}
+
+.token-icon {
+  border-bottom: 1px solid #E4E4E4;
 }
 
 .stakes-cell {
